
- SPL:
  . Fixed bug #71838 (Deserializing serialized SPLObjectStorage-Object can't
    access properties in PHP). (Nikita)
  . Fixed bug #71735 (Double-free in SplDoublyLinkedList::offsetSet). (Stas)
  . Fixed bug #67582 (Cloned SplObjectStorage with overwritten getHash fails
    offsetExists()). (Nikita)
  . Fixed bug #52339 (SPL autoloader breaks class_exists()). (Nikita)

- Standard:
  . Fixed bug #71940 (Unserialize crushes on restore object reference).
    (Laruence)
  . Fixed bug #71969 (str_replace returns an incorrect resulting array after
    a foreach by reference). (Laruence)
  . Fixed bug #71891 (header_register_callback() and
    register_shutdown_function()). (Laruence)
  . Fixed bug #71884 (Null pointer deref (segfault) in
    stream_context_get_default). (Laruence)
  . Fixed bug #71840 (Unserialize accepts wrongly data). (Ryat, Laruence)
  . Fixed bug #71837 (Wrong arrays behaviour). (Laruence)
  . Fixed bug #71827 (substr_replace bug, string length). (krakjoe)
  . Fixed bug #67512 (php_crypt() crashes if crypt_r() does not exist or
    _REENTRANT is not defined). (Nikita)

31 Mar 2016 PHP 7.0.5

- Core:
  . Huge pages disabled by default. (Rasmus)
  . Added ability to enable huge pages in Zend Memory Manager through
    the environment variable USE_ZEND_ALLOC_HUGE_PAGES=1. (Dmitry)
  . Fixed bug #71756 (Call-by-reference widens scope to uninvolved functions
    when used in switch). (Laruence)
  . Fixed bug #71729 (Possible crash in zend_bin_strtod, zend_oct_strtod,
    zend_hex_strtod). (Laruence)
  . Fixed bug #71695 (Global variables are reserved before execution).
    (Laruence)
  . Fixed bug #71629 (Out-of-bounds access in php_url_decode in context
    php_stream_url_wrap_rfc2397). (mt at debian dot org)
  . Fixed bug #71622 (Strings used in pass-as-reference cannot be used to
    invoke C::$callable()). (Bob)
  . Fixed bug #71596 (Segmentation fault on ZTS with date function
    (setlocale)). (Anatol)