@@ -84,6 +84,8 @@ PHP                                                                        NEWS
   . Fixed bug #52339 (SPL autoloader breaks class_exists()). (Nikita)
 
 - Standard:
+  . Fixed bug #71995 (Returning the same var twice from __sleep() produces
+    broken serialized data). (Laruence)
   . Fixed bug #71940 (Unserialize crushes on restore object reference).
     (Laruence)
   . Fixed bug #71969 (str_replace returns an incorrect resulting array after
